# NoiseWeaver

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  noiseweaver.example.toml  pyproject.toml
.github/workflows/: release.yml
docs/: perforce-local-server.md
noiseweaver/: __init__.py  cas.py  config.py  plugin.py  scheduler.py  shell.py  storage.py
noiseweaver/compute/: __init__.py  model.py  platforms.py  scheduler.py  tools.py
noiseweaver/pod/: __init__.py  comfyui.py  runpod.py  service.py  ssh.py
scripts/: check_ip_free.py
tests/: test_build.py  test_cas.py  test_comfyui.py  test_compute.py  test_config.py  test_pod_service.py  test_runpod.py  test_scheduler.py  test_shell.py  test_storage.py
