[project]
name = "noiseweaver"
version = "0.1.0"
description = "A rebrandable, polyglot platform shell for AI asset pipelines — pluggable pipelines, local-or-cloud compute, local|Perforce storage."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Guillaume Viot" }]
keywords = [
    "ai", "asset-pipeline", "build-system", "content-addressed",
    "compute-scheduler", "comfyui", "perforce", "gradio", "plugin",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "gradio>=4.44",         # the rebrandable web shell
    "requests>=2.31",       # RunPod GraphQL + ComfyUI HTTP (noiseweaver.pod / noiseweaver.compute)
    "paramiko>=3.4",        # persistent control SSH + port tunnel to a rented pod (noiseweaver.pod)
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "pytest>=8.0", "pre-commit>=3.7"]

[project.urls]
Homepage = "https://github.com/gviot/NoiseWeaver"
Repository = "https://github.com/gviot/NoiseWeaver"
Issues = "https://github.com/gviot/NoiseWeaver/issues"

[build-system]
requires = ["hatchling>=1.27"]   # >=1.27 for PEP 639 SPDX license + license-files
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["noiseweaver"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F/I/UP/B = style, pyflakes, import-sort, pyupgrade, bugbear.
# D100/D104/D419 = every module & package keeps a real (non-empty) docstring. The *richer* doc
# standard (explain what + why) is a review rule in CLAUDE.md, not a linter — forcing a docstring
# on every method (D102) produces box-ticking noise, not nice docs.
select = ["E", "F", "I", "UP", "B", "D100", "D104", "D419"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
